--- a/practices/practice02.ipynb
+++ b/practices/practice02.ipynb
@@ -13,13 +13,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__문제 1.__\n",
+    "__문제 1.__ 다음 조건을 만족시키는 `inserting_tab()` 함수를 정의하라.\n",
+    "\n",
+    "* 인자는 하나만 받으며, 매개변수는 `s`라 부른다.\n",
+    "* 문자열 하나를 인자로 받아 실행하면 해당 문자열의 앞쪽에 탭(`\\t`)이 \n",
+    "    삽입된 문자열을 반환하는 동시에 화면에 출력한다.\n",
+    "\n",
+    "```python\n",
+    ">>> print(inserting_tab('python'))\n",
+    ">>>     python\n",
+    ">>>     python\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
+    "\n",
+    "def inserting_tab(s):\n",
+    "    pass\n",
+    "\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(inserting_tab(\"hello\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__문제 2.__\n",
     "아래 노래 가사를 활용하는 문제이다."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +75,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "count_a = 0\n",
     "for word in song:\n",
@@ -64,17 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "count_w = 0\n",
     "for word in song.lower():\n",
@@ -88,23 +112,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(a) `song`이 가리키는 문자열에서 모음과 공백을 제거한 문자열 `whnyrsmlngthwhlwrldsmlswthy`를 \n",
+    "A. `song`이 가리키는 문자열에서 모음과 공백을 제거한 문자열 `whnyrsmlngthwhlwrldsmlswthy`를 \n",
     "생성하는 코드를 구현하라. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass 를 적절한 코드로 대체하라.\n",
     "\n",
@@ -119,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) `song`이 가리키는 문자열에서 지정된 문자들만 제거하는 함수 `remove_letters()`를 정의하라.\n",
+    "B. `song`이 가리키는 문자열에서 지정된 문자들만 제거하는 함수 `remove_letters()`를 정의하라.\n",
     "\n",
     "* `s`: 입력 인자로 문자열을 받음.\n",
     "* 반환값: 생성된 문자열"
@@ -127,20 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "''"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass 를 적절한 코드로 대체하라.\n",
     "\n",
@@ -158,9 +163,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__문제 2.__\n",
+    "__문제 3.__\n",
     "\n",
-    "(a) `while` 반복문을 이용하여 별표 기호(`*`)로 아래 모양의 삼각형을 출력하라.\n",
+    "A. `while` 반복문을 이용하여 별표 기호(`*`)로 아래 모양의 삼각형을 출력하라.\n",
     "\n",
     "```python\n",
     "*****\n",
@@ -175,21 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-20-652c7d87c178>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
@@ -203,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(b) `while` 반복문을 이용하여 별표 기호(`*`)로 아래 모양의 삼각형을 출력하라.\n",
+    "B. `while` 반복문을 이용하여 별표 기호(`*`)로 아래 모양의 삼각형을 출력하라.\n",
     "\n",
     "```python\n",
     "*****\n",
@@ -216,21 +209,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-652c7d87c178>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mi\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
@@ -259,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__문제 3.__\n",
+    "__문제 4.__\n",
     "1보다 큰 임의의 정수로 시작해서 짝수면 2로 나누고, \n",
     "홀수면 3배 후 1을 더해주는 과정을 반복하면 언젠가는 1이 나타난다.\n",
     "\n",
@@ -296,28 +277,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 "
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-15-3a16e549a756>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
@@ -333,28 +295,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7 "
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-352f00076dcf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
@@ -377,28 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "111 "
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "'>' not supported between instances of 'int' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-e607a43b059d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m' '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m         \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: '>' not supported between instances of 'int' and 'NoneType'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pass와 None을 각각 적절한 코드와 적절한 표현식으로 대체하라.\n",
     "\n",
@@ -416,55 +340,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__문제 4.__ 다음 조건을 만족시키는 `inserting_tab()` 함수를 정의하라.\n",
-    "\n",
-    "* 인자는 하나만 받으며, 매개변수는 `s`라 부른다.\n",
-    "* 문자열 하나를 인자로 받아 실행하면 해당 문자열의 앞쪽에 탭(`\\t`)이 \n",
-    "    삽입된 문자열을 반환하는 동시에 화면에 출력한다.\n",
-    "\n",
-    "```python\n",
-    ">>> print(inserting_tab('python'))\n",
-    ">>>     python\n",
-    ">>>     python\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pass와 None을 각각 적절한 코드와 표현식으로 대체하라.\n",
-    "\n",
-    "def inserting_tab(s):\n",
-    "    pass\n",
-    "\n",
-    "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(inserting_tab(\"hello\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "__연습 5.__ 다음과 같은 격자를 그리는 함수 `painting_check_2()`를 작성하라.\n",
+    "__문제 5.__ 다음과 같은 격자를 그리는 함수 `painting_check_2()`를 작성하라.\n",
     "\n",
     "```python\n",
     "+ - - - - + - - - - +\n",
@@ -482,23 +358,17 @@
     "\n",
     "단, 입력값은 사용하지 않으며, 반환값은 `None`으로 지정한다.\n",
     "\n",
-    "힌트: 한 줄에 하나 이상의 값을 출력하려면 `print()` 함수에 여러 인자를 사용하면 된다.\n",
+    "힌트: `print()` 함수는 또한 기본적으로 줄바꿈을 실행한다.\n",
+    "줄바꿈을 하지 않기 위해서는 `end=' '` 키워드 인자를 예를 들어 아래와 같이 실행하면 된다.\n",
     "\n",
     "```python\n",
-    "print('+', '-')\n",
-    "```\n",
-    "\n",
-    "`print()` 함수는 또한 기본적으로 줄바꿈을 실행한다.\n",
-    "줄바꿈을 하지 않기 위해서는 에를 들어 아래와 같이 실행하면 된다.\n",
-    "\n",
-    "```python\n",
-    "print('+', end=' ')\n",
+    "print('+', '-', end=' ')\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__연습 6.__ 4개의 행과 4개의 열을 갖는 격자를 그리는 함수 `painting_check_4()`를 작성하라.\n",
+    "__문제 6.__ 4개의 행과 4개의 열을 갖는 격자를 그리는 함수 `painting_check_4()`를 작성하라.\n",
     "단, 입력값은 없으며, 반환값은 사용된 `+` 기호의 개수이다.\n",
     "\n",
     "힌트: 함수의 기능을 분리하여 여러 개의 함수로 정의한 다음에 정의된 함수들을 적절하게 조합하라."
@@ -531,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__연습 7.__ 연습 2와 연습 3의 함수를 일반화하여 입력값 n이 주어지면 \n",
+    "__문제 7.__ 문제 5와 문제 6의 함수를 일반화하여 입력값 n이 주어지면 \n",
     "n개의 행과 n개의 열을 갖는 격자를 그리는 함수 `painting_check()`를 작성하라.\n",
     "단, 입력값은 양의 정수를 받는 n이며, 반환값은 사용된 `+` 기호의 개수이다.\n",
     "또한 `n=4`를 키워드 인자로 사용한다.\n",
@@ -566,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
